--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./gradlew build
+      run: bash gradlew build
     - name: Post Slack messages
       uses: pullreminders/slack-action@v1.0.7
       if: failure()
