--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,9 @@ jobs:
       with:
         java-version: 11.0.4
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew sonarqube
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     - name: Post Slack messages
       uses: pullreminders/slack-action@v1.0.7
       if: github.ref == 'refs/heads/master' && failure()
