--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2020.3.2"
+    id "org.sonarqube" version "2.8"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -65,4 +66,18 @@ dependencies {
 jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "momentumfrc_2020InfiniteRecharge"
+    property "sonar.organization", "momentumfrc"
+    property "sonar.host.url", "https://sonarcloud.io"
+    
+    property "sonar.projectName", "2020InfiniteRecharge"
+    property "sonar.links.homepage", "https://github.com/momentumfrc/2020InfiniteRecharge"
+    property "sonar.links.ci", "https://github.com/momentumfrc/2020InfiniteRecharge/actions"
+    property "sonar.links.scm", "https://github.com/momentumfrc/2020InfiniteRecharge"
+    property "sonar.links.issue", "https://github.com/momentumfrc/2020InfiniteRecharge/issues"
+  }
 }
