--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew sonarqube
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     - name: Post Slack messages
       uses: pullreminders/slack-action@v1.0.7
