--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2020.3.2"
     id "org.sonarqube" version "2.8"
+    id "jacoco"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -66,6 +67,16 @@ dependencies {
 jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
+}
+
+jacocoTestReport {
+  reports {
+    xml.enabled true
+  }
+}
+
+plugins.withType(JacocoPlugin) {
+  tasks["test"].finalizedBy 'jacocoTestReport'
 }
 
 sonarqube {
