--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "2020.3.2"
-    id "org.sonarqube" version "2.8"
-    id "jacoco"
+    id "edu.wpi.first.GradleRIO" version "2021.1.2"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -59,6 +57,17 @@ dependencies {
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
     simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
+    simulation wpi.deps.sim.driverstation(wpi.platforms.desktop, false)
+
+    // Websocket extensions require additional configuration.
+    // simulation wpi.deps.sim.ws_server(wpi.platforms.desktop, false)
+    // simulation wpi.deps.sim.ws_client(wpi.platforms.desktop, false)
+}
+
+// Simulation configuration (e.g. environment variables).
+sim {
+    // Sets the websocket client remote host.
+    // envVar "HALSIMWS_HOST", "10.0.0.2"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
@@ -67,30 +76,4 @@ dependencies {
 jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
-}
-
-jacocoTestReport {
-  reports {
-    xml.enabled true
-  }
-}
-
-plugins.withType(JacocoPlugin) {
-  tasks["test"].finalizedBy 'jacocoTestReport'
-}
-
-sonarqube {
-  properties {
-    property "sonar.projectKey", "momentumfrc_2020InfiniteRecharge"
-    property "sonar.organization", "momentumfrc"
-    property "sonar.host.url", "https://sonarcloud.io"
-
-    property "sonar.exclusions", "src/java/frc/robot/Robot.java, src/java/frc/robot/Main.java"
-    
-    property "sonar.projectName", "2020InfiniteRecharge"
-    property "sonar.links.homepage", "https://github.com/momentumfrc/2020InfiniteRecharge"
-    property "sonar.links.ci", "https://github.com/momentumfrc/2020InfiniteRecharge/actions"
-    property "sonar.links.scm", "https://github.com/momentumfrc/2020InfiniteRecharge"
-    property "sonar.links.issue", "https://github.com/momentumfrc/2020InfiniteRecharge/issues"
-  }
 }
