--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2021.1.2"
+    id "org.sonarqube" version "3.0"
+    id "jacoco"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
@@ -77,3 +79,31 @@ jar {
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
+
+jacocoTestReport {
+  reports {
+    xml.enabled true
+  }
+}
+
+plugins.withType(JacocoPlugin) {
+  tasks["test"].finalizedBy 'jacocoTestReport'
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "momentumfrc_2020InfiniteRecharge"
+    property "sonar.organization", "momentumfrc"
+    property "sonar.host.url", "https://sonarcloud.io"
+
+    property "sonar.exclusions", "src/java/frc/robot/Robot.java, src/java/frc/robot/Main.java"
+
+    property "sonar.projectName", "2020InfiniteRecharge"
+    property "sonar.links.homepage", "https://github.com/momentumfrc/2020InfiniteRecharge"
+    property "sonar.links.ci", "https://github.com/momentumfrc/2020InfiniteRecharge/actions"
+    property "sonar.links.scm", "https://github.com/momentumfrc/2020InfiniteRecharge"
+    property "sonar.links.issue", "https://github.com/momentumfrc/2020InfiniteRecharge/issues"
+  }
+}
+
+project.tasks["sonarqube"].dependsOn "test"
